# orkes_ds

./: .arbos-launch.sh  .gitignore  .venv  PROMPT.md  WORKLOG.md  add_pinyin.py  arbos.py  caodong-lyrics.html  permauth.py  pyproject.toml
caodong-site/: index.html  server.js  server.py
context/: .fleet_status.json  .step_msg  CONTEXT.md  EXPERTS_ACTIVATION.md  GOAL.md  STATE.md  bot.json  elliot_recon_2026-05-01.md  experts.json
context/chat/: 20260427_045821.jsonl  20260427_103821.jsonl  20260427_120722.jsonl
context/runs/20260427_045830/: logs.txt  output.txt  rollout.md
context/runs/20260427_051352/: logs.txt  output.txt  rollout.md
context/runs/20260427_051405/: logs.txt  output.txt  rollout.md
context/runs/20260427_051420/: logs.txt  output.txt  rollout.md
context/runs/20260427_051429/: logs.txt  output.txt  rollout.md
context/runs/20260427_051447/: logs.txt  output.txt  rollout.md
context/runs/20260427_051503/: logs.txt  output.txt  rollout.md
context/runs/20260427_051519/: logs.txt  output.txt  rollout.md
context/runs/20260427_051541/: logs.txt  output.txt  rollout.md
context/runs/20260427_051602/: logs.txt  output.txt  rollout.md
context/runs/20260427_051628/: logs.txt
lyrics/: nopartyforcaodong_lyrics.html
scripts/: bootstrap_account.py  boq_extract_daemon.py  check-bot.sh  launch_proxy.sh
tests/: conftest.py  test_boq_coverage.py  test_bot_handlers.py  test_coverage_phase2.py  test_handler_integrity.py  test_handler_media.py  test_permauth_auth.py  test_permauth_boq.py  test_targeted_coverage.py
(+37 files in other folders)
